add to mongodb and mongoose

--- a/OneDrive/Desktop/crud/.env
+++ b/OneDrive/Desktop/crud/.env
@@ -1,2 +1,2 @@
-PORT =8000
-MONGO_URL ="phulbabudas.d4hfr.mongodb.net//datasabe"
+PORT=8000
+MONGO_URL="mongodb+srv://user1:xBw8RkqM5kWYq9Fb@phulbabudas.d4hfr.mongodb.net/?retryWrites=true&w=majority&appName=PHULBABUDAS"
